--- a/config.yml
+++ b/config.yml
@@ -5,24 +5,24 @@
 Version: 1.8.1
 # 调试模式，用于寻找错误出现的坐标，默认为false
 # 特别提示：调试完成后请记得将debug改为false
-# 特别提示：调试完成后请记得将debug改为false
-# 特别提示：调试完成后请记得将debug改为false
+
 debug: False
 # 消息推送配置，method 0 为禁用 1 为webApi模式 2 为本地smtp模式 3 为qmsg模式(qq号模式)
 # 消息推送配置，method 4 为qmsg模式(qq群模式) method 5 为企业微信模式 method 6 为Server酱模式
+##此处默认禁用。
 notifyOption:
-    method: 2
+    method: 0
     #############配置1-4选填一个即可
     #############1 webApi配置,根据不同api可能需要自行修改推送模块
     mailApiUrl: 'http://api.ruoli.cc/mail/sendMail'
     #############2 发信方邮箱账号密码,smtp服务器qq邮箱为smtp.qq.com,163邮箱为smtp.163.com
     smtpOption:
-        userName: '2462854425@qq.com'
-        passWord: 'qwipmevxdhbeecij'
+        userName: ''#此处填写发信箱的账号
+        passWord: ''#注意，此处填写的是--，不是填写你的QQ密码
         server: 'smtp.qq.com'
     #############3 完善qmsgKey即可,需要完善-user字段中qId参数，详见下方例子
     qmsgOption:
-        key: '5c7172a9f369ef66a9ad44f8199cd12c'
+        key: ''
         baseUrl: 'https://qmsg.zendee.cn/'
     #############4 企业微信配置
     qywxOption:
@@ -32,10 +32,10 @@ notifyOption:
     #############5 Server酱的Key请在下方rcvAcc处填写
     serverChanOption:
         baseUrl: 'https://sctapi.ftqq.com/'
-# 默认不填，如需使用先开通腾讯云OCR服务，再申请API密钥
+# 北部湾大学使用学工号登录今日校园有图片验证码，需要开通腾讯云OCR服务，再申请API密钥，详见自述文件（readme）
 ocrOption:
-    SecretId: 'AKID98rJVQ5TbT4OcZFemdDVXIlxsWtymJZZ'
-    SecretKey: 'kEQLzNUJr9AtLWQ3PUJvGK7dspZ2E9m9'
+    SecretId: ''
+    SecretKey: ''
 # 如IP被拦截，可设置全局HTTP代理
 httpProxy: ''
 #用户组配置
@@ -44,30 +44,30 @@ httpProxy: ''
 ##################################################
 users:
 
-    # 第三个用户配置
-    # 以下配置为签到
-    # 这里默认仅适配武汉船舶职业技术学院，其他学校自行修改
+  
+   
+    # 这里默认仅适配北部湾大学，其他学校自行修改
     - user:
         # 任务类型（收集：0、签到：1、查寝：2）
         type: 0
         # school 学校全称
         schoolName: 北部湾大学
         # username 学号或者工号
-        username: '1905417102'
+        username: '' #这里填写你的学号
         # password 密码
-        password: 'Lotus1103.'
+        password: '' #这里填写你的密码，就是教务系统那个密码。
         # address 地址，定位信息
-        address: '中国广西壮族自治区桂林市恭城瑶族自治县莲花镇'
+        address: '中国广西壮族自治区钦州市钦南区G75兰海高速'
         notifyOption: 
             # method和顶部参数一致，不填默认按照顶部参数执行
             # method: 0
             # rcvAcc为接受消息的账号，可以为Email账号、QQ号、或者是企业微信ID(@all为全体)
-            rcvAcc: '2862854425@qq.com'
-        # 附上经纬度查询地址（请自行选择自己的学校地址，address，lon，lat都要填查询到的）：http://api.map.baidu.com/lbsapi/getpoint/index.html
+            rcvAcc: ''
+        # 此处是北部湾大学的经纬度，其他学校的小伙伴请自行查询自己学校的经纬度。
         # lon 经度
-        lon: 24.713724
+        lon: 21.898075
         # lat 纬度
-        lat: 110.918068
+        lat: 108.61569
         # abnormalReason 反馈信息（这个一般不用配置，但是不能删除，删除会报错）
         abnormalReason: ''
         # 是否检查表单的标题（1代表检查，0代表不检查）
@@ -76,10 +76,10 @@ users:
         forms:
          - form:
              title: 今天是否在校？
-             value: 否
+             value: 是
          - form:
              title: 今天你的所在地是？
-             value: 广西壮族自治区/桂林市/恭城瑶族自治县
+             value: 广西壮族自治区/钦州市/钦南区
          - form:
              title: 今天你的所在地是否为中高风险地区？
              value: 否
